--- a/style.css
+++ b/style.css
@@ -707,6 +707,7 @@ p {
 h2 {
     font-size: 22px;
     line-height: 1.4em;
+    position: relative;
 }
 
 h3 {
@@ -774,8 +775,8 @@ h4 {
     background-color: #F3976C;
 }
 
-.tc-white {
-    color: #F3976C!important;
+.tc-orange {
+    color: #fd9768!important;
 }
 
 .btn-atomic-tangerine {
