--- a/style.css
+++ b/style.css
@@ -302,7 +302,8 @@ a:hover {
 }
 
 .navbar-brand img {
-    max-height: 200px;
+    max-height: 40px;
+    width: 100%;
     margin: 0 5px 0 0;
     display: inline;
 }
@@ -827,6 +828,11 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.jpg");
+}
+
+.img-logo {
+    width: 100px;
+    height: 100px;
 }
 
 .img-responsive {
